kubernetes/fe/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fluentsearch-fe-service
  namespace: fluentsearch
  annotations:
    linkerd.io/inject: enabled
spec:
  selector:
    app: fluentsearch-fe
  ports:
    - port: 80
