kubernetes/fe/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluentsearch-fe-ingress
  namespace: fluentsearch-fe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "fluentsearch.ml"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fluentsearch-fe-service
                port:
                  number: 3000
